--- a/static/index.html
+++ b/static/index.html
@@ -8,170 +8,40 @@
 
 <style>
   :root{
-    --bg:#0A1220;
-    --panel:#0B1322;
-    --text:#F5F7FA;
-    --muted:#C7CCD7;
-    --border:#1C2A3F;
-    --cta:#111722;
-    --radius:20px;
-    --space:22px;
-    --container:1120px;
-    --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text",
-           "Helvetica Neue", "Segoe UI", Roboto, Arial, sans-serif;
+    --bg:#0A1220; --panel:#0B1322; --text:#F5F7FA; --muted:#C7CCD7;
+    --border:#1C2A3F; --cta:#111722; --radius:20px; --space:22px; --container:1120px;
+    --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text","Helvetica Neue","Segoe UI", Roboto, Arial, sans-serif;
   }
-
   *{box-sizing:border-box}
   html,body{height:100%}
-  body{
-    margin:0;
-    font-family:var(--font);
-    background:var(--bg);
-    color:var(--text);
-    -webkit-font-smoothing:antialiased;
-    text-rendering:optimizeLegibility;
-  }
+  body{margin:0;font-family:var(--font);background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;}
 
-  .wrap{
-    width:100%;
-    max-width:var(--container);
-    margin:0 auto;
-    padding:calc(var(--space)*2) var(--space) calc(var(--space)*3); /* reduced top padding */
-    display:grid;
-    gap:calc(var(--space)*2);
-  }
+  .wrap{width:100%;max-width:var(--container);margin:0 auto;padding:calc(var(--space)*2) var(--space) calc(var(--space)*3);display:grid;gap:calc(var(--space)*2);}
+  @media (min-width:980px){.wrap{grid-template-columns:1fr 1fr;align-items:center;min-height:80dvh;}}
+  .stack{max-width:640px;margin:auto;text-align:center;}
 
-  @media (min-width: 980px){
-    .wrap{
-      grid-template-columns: 1fr 1fr;
-      align-items:center;
-      min-height: 80dvh;
-    }
-  }
+  .logo{font-family:"SF Pro Display",-apple-system,"Helvetica Neue",Arial,sans-serif;font-weight:700;font-size:64px;letter-spacing:-.03em;margin:0 0 calc(var(--space)*0.8);line-height:1;}
+  .tagline{font-size:24px;line-height:1.25;margin:0 0 calc(var(--space)*1.2);}
+  .bullets{list-style:none;margin:0 0 calc(var(--space)*1.4);padding:0;display:grid;gap:14px;justify-content:center;}
+  .bullet{display:grid;grid-template-columns:26px 1fr;column-gap:12px;align-items:center;font-size:17px;line-height:1.45;max-width:400px;margin:0 auto;}
+  .tick{width:22px;height:22px;border-radius:999px;display:grid;place-items:center;background:var(--bg);border:1px solid var(--bg);}
+  .tick svg path{stroke:var(--bg);}
 
-  .stack{max-width: 640px; margin:auto; text-align:center;}
+  .cta{display:inline-block;width:100%;max-width:300px;margin:auto;padding:16px 18px;text-align:center;font-weight:600;font-size:17px;color:var(--text);background:var(--cta);border:none;border-radius:14px;position:relative;z-index:0;overflow:hidden;transition:transform .06s ease,background .2s ease;text-decoration:none;}
+  .cta::before{content:"";position:absolute;inset:-6px;border-radius:inherit;background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);filter:blur(6px);z-index:-2;animation:spin 4s linear infinite;opacity:0;transition:opacity .3s ease;}
+  .cta::after{content:"";position:absolute;inset:0;border-radius:inherit;background:var(--cta);z-index:-1;}
+  .cta:hover{transform:translateY(-1px);background:#101828;}
+  .cta:hover::before{opacity:1;}
+  @keyframes spin{to{transform:rotate(360deg);}}
+  .note{color:var(--muted);font-size:13px;margin-top:10px}
 
-  .logo{
-    font-family: "SF Pro Display", -apple-system, BlinkMacSystemFont, "Helvetica Neue", Arial, sans-serif;
-    font-weight:700;
-    font-size:64px;
-    letter-spacing:-0.03em;
-    margin:0 0 calc(var(--space)*0.8);
-    line-height:1;
-  }
+  .visual{border:1px solid var(--border);border-radius:var(--radius);background:var(--panel);padding:20px;display:flex;align-items:center;justify-content:center;}
 
-  .tagline{
-    font-size:24px;
-    line-height:1.25;
-    margin:0 0 calc(var(--space)*1.2);
-  }
+  footer{text-align:center;padding:calc(var(--space)*2);border-top:1px solid var(--border);color:var(--muted);font-size:14px;margin-top:calc(var(--space)*3);}
+  @media (min-width:1200px){.logo{font-size:72px}.tagline{font-size:26px}}
 
-  .bullets{
-    list-style:none; margin:0 0 calc(var(--space)*1.4); padding:0;
-    display:grid; gap:14px;
-    justify-content:center;
-  }
-  .bullet{
-    display:grid; grid-template-columns:26px 1fr; column-gap:12px;
-    align-items:center; font-size:17px; line-height:1.45;
-    max-width:400px; margin:0 auto;
-  }
-  .tick{
-    width:22px; height:22px; border-radius:999px;
-    display:grid; place-items:center;
-    background:var(--bg);
-    border:1px solid var(--bg);
-  }
-  .tick svg path{ stroke:var(--bg); }
-
-  /* CTA with glowing rainbow border */
-  .cta {
-    display:inline-block; 
-    width:100%; 
-    max-width:300px;
-    margin:auto;
-    padding:16px 18px; 
-    text-align:center;
-    font-weight:600; 
-    font-size:17px;
-    color:var(--text);
-    background:var(--cta);
-    border:none;
-    border-radius:14px;
-    position:relative;
-    z-index:0;
-    overflow:hidden;
-    transition:transform .06s ease, background .2s ease;
-  }
-
-  .cta::before {
-    content:"";
-    position:absolute;
-    inset:-6px;
-    border-radius:inherit;
-    background:conic-gradient(
-      from 0deg,
-      #ff6b6b,
-      #feca57,
-      #1dd1a1,
-      #54a0ff,
-      #5f27cd,
-      #ff6b6b
-    );
-    filter:blur(6px);
-    z-index:-2;
-    animation:spin 4s linear infinite;
-    opacity:0;
-    transition:opacity .3s ease;
-  }
-
-  .cta::after {
-    content:"";
-    position:absolute;
-    inset:0;
-    border-radius:inherit;
-    background:var(--cta);
-    z-index:-1;
-  }
-
-  .cta:hover {
-    transform:translateY(-1px);
-    background:#101828;
-  }
-
-  .cta:hover::before {
-    opacity:1;
-  }
-
-  @keyframes spin {
-    to { transform:rotate(360deg); }
-  }
-
-  .note{color:var(--muted); font-size:13px; margin-top:10px}
-
-  .visual{
-    border:1px solid var(--border);
-    border-radius:var(--radius);
-    background:var(--panel);
-    padding:20px;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-  }
-
-  footer{
-    text-align:center;
-    padding:calc(var(--space)*2);
-    border-top:1px solid var(--border);
-    color:var(--muted);
-    font-size:14px;
-    margin-top:calc(var(--space)*3);
-  }
-
-  @media (min-width:1200px){
-    .logo{font-size:72px}
-    .tagline{font-size:26px}
-  }
+  /* warm status */
+  #warm-status{font:14px/1.4 system-ui;margin:8px 0;color:#C7CCD7;display:none;}
 </style>
 </head>
 <body>
@@ -184,18 +54,20 @@
     <ul class="bullets">
       <li class="bullet">
         <span class="tick" aria-hidden="true">
-          <svg viewBox="0 0 24 24" fill="none">
+          <svg viewBox="0 0 24 24" fill="none" width="22" height="22" aria-hidden="true">
             <path d="M6 12.5l3.2 3.2L18 7.9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
           </svg>
         </span>
-        <span>
-        Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.
-        </span>
+        <span>Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.</span>
       </li>
     </ul>
 
-    <a href="/static/research.html" class="cta" id="getStarted">Get started</a>
+    <!-- use FastAPI route (not /static/research.html) -->
+    <a href="/research" class="cta" id="getStarted">Take part</a>
     <div class="note">In development stages. Register interest.</div>
+
+    <!-- warm status (screen-reader friendly) -->
+    <div id="warm-status" aria-live="polite"></div>
   </section>
 
   <aside class="visual">
@@ -212,7 +84,38 @@
   &copy; <script>document.write(new Date().getFullYear())</script> Lylo. All rights reserved.
 </footer>
 
+<script>
+  // If frontend and backend are same service on Render, leave API = "" (same-origin).
+  // If you later split hosting, set API to your backend URL and add that origin in FastAPI CORS.
+  const API = "";
 
+  const wait = (ms) => new Promise(r => setTimeout(r, ms));
+  const withTimeout = (p, ms=15000) => Promise.race([p, new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))]);
+
+  async function prewarm() {
+    const el = document.getElementById("warm-status");
+    if (!el) return;
+    el.style.display = "block";
+    el.textContent = "Preparing transcriber…";
+    const delays = [0, 2000, 4000, 8000, 16000, 32000]; // ~1 min total
+    for (const d of delays) {
+      if (d) await wait(d);
+      try {
+        const t0 = performance.now();
+        await withTimeout(fetch(`${API}/healthz`, { cache: "no-store", keepalive: true }), 15000);
+        const ms = Math.round(performance.now() - t0);
+        el.textContent = `Ready in ${ms} ms`;
+        setTimeout(() => { el.style.display = "none"; }, 2000);
+        return;
+      } catch(e) {
+        el.textContent = "Warming up server… (first load can take up to a minute)";
+      }
+    }
+    el.textContent = "Still starting — try again shortly.";
+  }
+
+  document.addEventListener("DOMContentLoaded", prewarm);
+</script>
 
 </body>
 </html>
