--- a/static/research.html
+++ b/static/research.html
@@ -41,6 +41,7 @@
   }
   .logo:hover{ opacity:0.85; }
   .tagline{ font-size:22px; line-height:1.25; margin:0; color:var(--muted); }
+  #warm-status{ font:14px/1.4 system-ui; margin-top:8px; color:#C7CCD7; display:none; }
 
   /* Form proportions */
   form{
@@ -135,8 +136,9 @@
 <main class="wrap">
   <section class="panel">
     <header class="header">
-      <a href="index.html" class="logo">Lylo.</a>
+      <a href="/" class="logo">Lylo.</a>
       <h1 class="tagline" style="margin-top:6px;">Thanks for being part of our research!</h1>
+      <div id="warm-status" aria-live="polite"></div>
     </header>
 
     <form id="researchForm" novalidate>
@@ -319,22 +321,99 @@
 </footer>
 
 <script>
-  // Local save (swap for POST later if needed)
+  // --- pre-warm on load (Render free tier) ---
+  const API = ""; // same-origin
+  const wait = (ms) => new Promise(r => setTimeout(r, ms));
+  const withTimeout = (p, ms=15000) => Promise.race([p, new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))]);
+
+  async function prewarm() {
+    const el = document.getElementById("warm-status");
+    if (!el) return;
+    el.style.display = "block";
+    el.textContent = "Preparing transcriber…";
+    const delays = [0, 2000, 4000, 8000, 16000, 32000]; // ~1 minute total
+    for (const d of delays) {
+      if (d) await wait(d);
+      try {
+        const t0 = performance.now();
+        await withTimeout(fetch(`${API}/healthz`, { cache: "no-store", keepalive: true }), 15000);
+        const ms = Math.round(performance.now() - t0);
+        el.textContent = `Ready in ${ms} ms`;
+        setTimeout(() => { el.style.display = "none"; }, 2000);
+        return;
+      } catch { el.textContent = "Warming up server… (first load can take up to a minute)"; }
+    }
+    el.textContent = "Still starting — try again shortly.";
+  }
+  document.addEventListener("DOMContentLoaded", prewarm);
+</script>
+
+<script>
+  // --- submit to /api/submit (emails you) ---
   const form = document.getElementById('researchForm');
   const success = document.getElementById('success');
-  form.addEventListener('submit', (e) => {
+
+  form.addEventListener('submit', async (e) => {
     e.preventDefault();
     if (!form.checkValidity()) { form.reportValidity(); return; }
-    const data = Object.fromEntries(new FormData(form).entries());
-    const entries = JSON.parse(localStorage.getItem('lylo_research') || '[]');
-    entries.push({ ...data, submittedAt: new Date().toISOString() });
-    localStorage.setItem('lylo_research', JSON.stringify(entries));
-    success.style.display = 'block';
-    form.reset();
-    success.scrollIntoView({ behavior: 'smooth', block: 'center' });
-  });
 
-  // Recorder → /api/transcribe
+    // Collect all field values
+    const raw = new FormData(form);
+    const all = Object.fromEntries(raw.entries());
+
+    // Build answers object (exclude name/email)
+    const { name = "", email = "", ...rest } = all;
+    const answers = {
+      role: rest.role || "",
+      experience: rest.experience || "",
+      q_bottleneck: rest.q_bottleneck || "",
+      q_automate: rest.q_automate || "",
+      q_workflow: rest.q_workflow || "",
+      q_accuracy_speed: rest.q_accuracy_speed || "",
+      q_collab: rest.q_collab || "",
+      q_errors: rest.q_errors || "",
+      q_ai_concerns: rest.q_ai_concerns || "",
+      ai_view: rest.ai_view || "",
+      ai_view_why: rest.ai_view_why || "",
+      q_security: rest.q_security || "",
+      q_outcome: rest.q_outcome || "",
+      q_anything: rest.q_anything || ""
+    };
+
+    // Optional combined transcript of long answers
+    const combinedTranscript =
+      [answers.q_bottleneck, answers.q_automate, answers.q_workflow, answers.q_accuracy_speed,
+       answers.q_collab, answers.q_errors, answers.q_ai_concerns, answers.ai_view_why,
+       answers.q_security, answers.q_outcome, answers.q_anything]
+      .filter(Boolean).join('\n\n');
+
+    const fd = new FormData();
+    fd.append('name', name);
+    fd.append('email', email);
+    fd.append('answers', JSON.stringify(answers));
+    fd.append('transcript', combinedTranscript);
+
+    const btn = form.querySelector('button[type="submit"]');
+    const original = btn.textContent;
+    btn.disabled = true; btn.textContent = 'Submitting…';
+    try {
+      const res = await fetch('/api/submit', { method: 'POST', body: fd });
+      const json = await res.json();
+      if (!res.ok || !json.ok) throw new Error(json.error || 'Submit failed');
+      success.style.display = 'block';
+      form.reset();
+      success.scrollIntoView({ behavior: 'smooth', block: 'center' });
+    } catch (err) {
+      alert('Sorry, we could not submit your response. Please try again in a moment.');
+      console.error(err);
+    } finally {
+      btn.disabled = false; btn.textContent = original;
+    }
+  });
+</script>
+
+<script>
+  // --- recorder per question -> /api/transcribe ---
   (function(){
     if (!navigator.mediaDevices || !window.MediaRecorder) return;
     const buttons = Array.from(document.querySelectorAll('.rec-btn'));
@@ -353,10 +432,12 @@
       mediaRecorder.ondataavailable = e => { if (e.data && e.data.size) chunks.push(e.data); };
       mediaRecorder.onstop = async () => {
         try { stream.getTracks().forEach(t => t.stop()); } catch(e){}
+
         const blob = new Blob(chunks, { type: mediaRecorder.mimeType || 'audio/webm' });
         chunks = [];
 
         try {
+          btn.disabled = true;
           const fd = new FormData();
           fd.append('file', blob, 'answer.webm');
           fd.append('question_id', targetId);
@@ -364,22 +445,27 @@
           if (!res.ok) throw new Error('Transcription failed');
           const { transcript } = await res.json();
           const ta = document.getElementById(targetId);
-          ta.value = (ta.value ? (ta.value.trim() + '\n\n') : '') + (transcript || '').trim();
-          ta.dispatchEvent(new Event('input', { bubbles:true }));
+          const cleaned = (transcript || '').trim();
+          if (cleaned) {
+            ta.value = (ta.value ? ta.value.trim() + '\n\n' : '') + cleaned;
+            ta.dispatchEvent(new Event('input', { bubbles:true }));
+          } else {
+            alert('No speech detected. Try again a little closer to the mic.');
+          }
         } catch (err) {
           console.error(err);
           alert('Sorry, we could not transcribe that audio.');
         } finally {
           btn.disabled = false;
           btn.setAttribute('aria-pressed', 'false');
-          btn.textContent = '🎙️ Record';
+          btn.querySelector('.label')?.replaceChildren('Record');
           currentBtn = null;
         }
       };
 
       mediaRecorder.start();
       btn.setAttribute('aria-pressed', 'true');
-      btn.textContent = '■ Stop';
+      btn.querySelector('.label')?.replaceChildren('Stop');
       currentBtn = btn;
     }
 
@@ -390,7 +476,9 @@
 
     buttons.forEach(btn => {
       btn.addEventListener('click', async () => {
-        if (currentBtn && currentBtn !== btn && mediaRecorder?.state === 'recording') { stopRecording(); return; }
+        if (currentBtn && currentBtn !== btn && mediaRecorder?.state === 'recording') {
+          stopRecording(); return;
+        }
         if (!mediaRecorder || mediaRecorder.state === 'inactive') {
           btn.disabled = true;
           try { await startRecording(btn); } finally { btn.disabled = false; }
