--- a/static/research.html
+++ b/static/research.html
@@ -8,7 +8,7 @@
 <style>
   :root{
     --bg:#0A1220; --panel:#0B1322; --text:#F5F7FA; --muted:#C7CCD7;
-    --border:#1C2A3F; --cta:#111722; --radius:20px; --space:24px;
+    --border:#1C2A3F; --cta:#111722; --radius:20px; --space:22px;
     --container:1120px;
     --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text",
            "Helvetica Neue", "Segoe UI", Roboto, Arial, sans-serif;
@@ -25,15 +25,15 @@
   .wrap{
     width:100%; max-width:var(--container); margin:0 auto;
     padding:calc(var(--space)*2) var(--space) calc(var(--space)*3);
-    display:grid; gap:calc(var(--space)*2.2);
+    display:grid; gap:calc(var(--space)*2);
   }
   .panel{
     border:1px solid var(--border);
     border-radius:var(--radius);
     background:var(--panel);
-    padding:calc(var(--space)*1.6);
+    padding:calc(var(--space)*1.5);
   }
-  .header{ text-align:center; margin-bottom:calc(var(--space)*0.6); }
+  .header{ text-align:center; margin-bottom:calc(var(--space)*1); }
   .logo{
     font-weight:700; font-size:40px; letter-spacing:-0.03em;
     margin:0 0 8px 0; line-height:1;
@@ -41,26 +41,26 @@
   }
   .logo:hover{ opacity:0.85; }
   .tagline{ font-size:22px; line-height:1.25; margin:0; color:var(--muted); }
-  #warm-status{ font:14px/1.4 system-ui; margin-top:10px; color:#C7CCD7; display:none; }
+  #warm-status{ font:14px/1.4 system-ui; margin-top:8px; color:#C7CCD7; display:none; }
 
   /* Form proportions */
   form{
     display:grid;
-    gap:28px;                     /* more vertical spacing */
-    max-width:780px;              /* comfortably narrow */
+    gap:24px;
+    max-width:760px;           /* keeps form comfortably narrow */
     margin:0 auto;
   }
   .inline{
     display:grid;
-    gap:20px;
+    gap:16px;
   }
   @media (min-width:720px){
-    .inline{ grid-template-columns:1fr 1fr; }
+    .inline{ grid-template-columns:1fr 1fr; } /* pairs short fields */
   }
   .field{
     display:flex;
     flex-direction:column;
-    gap:10px;                     /* a bit more air between label/control */
+    gap:8px;
   }
 
   /* Inputs */
@@ -72,14 +72,14 @@
     border:1px solid var(--border);
     background:#0a1426;
     color:var(--text);
-    border-radius:16px;
-    padding:16px 16px;
-    font-size:16px;
+    border-radius:14px;
+    padding:14px 14px;
+    font-size:15px;
     outline:none;
     transition:border-color .15s ease, box-shadow .15s ease, background .2s ease;
   }
   textarea{
-    min-height:160px;             /* slightly taller by default */
+    min-height:140px;          /* consistent height for big answers */
     resize:vertical;
     line-height:1.5;
   }
@@ -90,7 +90,7 @@
 
   /* Mic inside textarea */
   .with-mic{ position:relative; }
-  .with-mic textarea{ padding-right:104px; } /* room for button */
+  .with-mic textarea{ padding-right:98px; } /* extra room for button on small screens */
   .rec-btn{
     border:1px solid var(--border);
     background:#0a1426; color:var(--text);
@@ -100,16 +100,18 @@
   }
   .rec-btn.rec-btn--inside{
     position:absolute; bottom:10px; right:10px; z-index:2;
-    padding:9px 14px; box-shadow:0 2px 10px rgba(0,0,0,.25);
-    min-width:92px; justify-content:center;
+    padding:8px 12px; box-shadow:0 2px 10px rgba(0,0,0,.25);
+    /* make sure label is always visible on mobile */
+    min-width:86px; justify-content:center;
   }
   .rec-btn[aria-pressed="true"]{ background:#101828; transform:translateY(-1px); }
   .rec-btn:focus{ outline:none; box-shadow:0 0 0 3px rgba(84,160,255,.15), 0 2px 10px rgba(0,0,0,.25); }
+  /* IMPORTANT: keep label visible on mobile (no hiding) */
   .rec-btn .label{ white-space:nowrap; }
 
   /* spinner + status */
   .transcribe-status{
-    font-size:12px; color:var(--muted); margin-top:8px;
+    font-size:12px; color:var(--muted); margin-top:6px;
     display:flex; align-items:center; gap:8px;
   }
   .spinner{
@@ -119,19 +121,9 @@
   }
   @keyframes spin{ to { transform:rotate(360deg); } }
 
-  /* Submit section highlight */
-  .submit-section {
-    border: 1px solid var(--border);
-    border-radius: var(--radius);
-    padding: 20px 20px;
-    background: #0d1628; /* subtle tint */
-    margin-top: 8px;
-  }
-  .submit-section .note { margin-top: 10px; }
-
   /* Submit button */
   .cta{
-    display:inline-block; width:100%; max-width:300px; margin-top:6px;
+    display:inline-block; width:100%; max-width:260px; margin-top:6px;
     padding:16px 18px; text-align:center; font-weight:600; font-size:16px;
     color:var(--text); background:var(--cta); border:none; border-radius:14px;
     position:relative; z-index:0; overflow:hidden; cursor:pointer;
@@ -151,17 +143,6 @@
     display:none; margin-top:10px; padding:12px 14px;
     border-radius:12px; border:1px solid #1d3a2a;
     background:#0d1f16; color:#d5f5e3; font-size:14px;
-  }
-
-  /* --- Mobile centering & spacing --- */
-  @media (max-width: 719px){
-    .panel{ padding:calc(var(--space)*1.4); }
-    .header, form, .field{ text-align:center; }
-    label{ text-align:center; }
-    .with-mic textarea{ padding-right:110px; } /* ensure space for button */
-    .submit-section{ padding:22px; }
-    form{ gap:30px; }             /* a touch more gap on mobile */
-    .cta{ margin-left:auto; margin-right:auto; }
   }
 </style>
 </head>
@@ -340,14 +321,10 @@
       </div>
 
       <!-- Submit -->
-      <div class="field submit-section">
+      <div class="field">
         <button type="submit" class="cta">Submit response</button>
-        <div class="note">
-          By submitting, you consent to us processing your responses for product research.
-        </div>
-        <div id="success" class="success" role="status" aria-live="polite">
-          Thanks — your response has been recorded.
-        </div>
+        <div class="note">By submitting, you consent to us processing your responses for product research.</div>
+        <div id="success" class="success" role="status" aria-live="polite">Thanks — your response has been recorded.</div>
       </div>
     </form>
   </section>
@@ -449,7 +426,7 @@
   });
 </script>
 
-<!-- recorder with spinner -->
+<!-- recorder with spinner + always-visible label -->
 <script>
   (function(){
     if (!navigator.mediaDevices || !window.MediaRecorder) return;
@@ -522,14 +499,14 @@
         } finally {
           btn.disabled = false;
           btn.setAttribute('aria-pressed', 'false');
-          btn.querySelector('.label')?.replaceChildren('Record');
+          btn.querySelector('.label')?.replaceChildren('Record'); // keep label visible on mobile
           currentBtn = null;
         }
       };
 
       mediaRecorder.start();
       btn.setAttribute('aria-pressed', 'true');
-      btn.querySelector('.label')?.replaceChildren('Stop'); /* clear on mobile */
+      btn.querySelector('.label')?.replaceChildren('Stop'); // clearly shows Stop on mobile
       currentBtn = btn;
     }
 
@@ -555,4 +532,3 @@
 </script>
 </body>
 </html>
-
