Update take part button

--- a/static/index.html
+++ b/static/index.html
@@ -27,21 +27,29 @@
   .tick{width:22px;height:22px;border-radius:999px;display:grid;place-items:center;background:var(--bg);border:1px solid var(--bg);}
   .tick svg path{stroke:var(--bg);}
 
-  .cta{display:inline-block;width:100%;max-width:300px;margin:auto;padding:16px 18px;text-align:center;font-weight:600;font-size:17px;color:var(--text);background:var(--cta);border:none;border-radius:14px;position:relative;z-index:0;overflow:hidden;transition:transform .06s ease,background .2s ease;text-decoration:none;}
+  .cta{
+    display:inline-block;width:100%;max-width:300px;margin:auto;
+    padding:16px 18px;text-align:center;font-weight:600;font-size:17px;
+    color:var(--text);background:var(--cta);border:none;border-radius:14px;
+    position:relative;z-index:0;overflow:hidden;text-decoration:none;
+    transition:transform .06s ease, background .2s ease, outline-color .2s ease;
+    /* subtle outline */
+    outline:2px solid rgba(84,160,255,.18);
+    outline-offset:2px;
+  }
   .cta::before{content:"";position:absolute;inset:-6px;border-radius:inherit;background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);filter:blur(6px);z-index:-2;animation:spin 4s linear infinite;opacity:0;transition:opacity .3s ease;}
   .cta::after{content:"";position:absolute;inset:0;border-radius:inherit;background:var(--cta);z-index:-1;}
-  .cta:hover{transform:translateY(-1px);background:#101828;}
+  .cta:hover{transform:translateY(-1px);background:#101828;outline-color:rgba(84,160,255,.28);}
   .cta:hover::before{opacity:1;}
+  .cta:focus-visible{outline:3px solid rgba(84,160,255,.38);outline-offset:3px;box-shadow:0 0 0 3px rgba(84,160,255,.18);}
   @keyframes spin{to{transform:rotate(360deg);}}
+
   .note{color:var(--muted);font-size:13px;margin-top:10px}
 
   .visual{border:1px solid var(--border);border-radius:var(--radius);background:var(--panel);padding:20px;display:flex;align-items:center;justify-content:center;}
 
   footer{text-align:center;padding:calc(var(--space)*2);border-top:1px solid var(--border);color:var(--muted);font-size:14px;margin-top:calc(var(--space)*3);}
   @media (min-width:1200px){.logo{font-size:72px}.tagline{font-size:26px}}
-
-  /* warm status */
-  #warm-status{font:14px/1.4 system-ui;margin:8px 0;color:#C7CCD7;display:none;}
 </style>
 </head>
 <body>
@@ -62,12 +70,8 @@
       </li>
     </ul>
 
-    <!-- use FastAPI route (not /static/research.html) -->
     <a href="/research" class="cta" id="getStarted">Take part</a>
     <div class="note">In development stages. Register interest.</div>
-
-    <!-- warm status (screen-reader friendly) -->
-    <div id="warm-status" aria-live="polite"></div>
   </section>
 
   <aside class="visual">
@@ -84,38 +88,6 @@
   &copy; <script>document.write(new Date().getFullYear())</script> Lylo. All rights reserved.
 </footer>
 
-<script>
-  // If frontend and backend are same service on Render, leave API = "" (same-origin).
-  // If you later split hosting, set API to your backend URL and add that origin in FastAPI CORS.
-  const API = "";
-
-  const wait = (ms) => new Promise(r => setTimeout(r, ms));
-  const withTimeout = (p, ms=15000) => Promise.race([p, new Promise((_,rej)=>setTimeout(()=>rej(new Error("timeout")), ms))]);
-
-  async function prewarm() {
-    const el = document.getElementById("warm-status");
-    if (!el) return;
-    el.style.display = "block";
-    el.textContent = "Preparing transcriber…";
-    const delays = [0, 2000, 4000, 8000, 16000, 32000]; // ~1 min total
-    for (const d of delays) {
-      if (d) await wait(d);
-      try {
-        const t0 = performance.now();
-        await withTimeout(fetch(`${API}/healthz`, { cache: "no-store", keepalive: true }), 15000);
-        const ms = Math.round(performance.now() - t0);
-        el.textContent = `Ready in ${ms} ms`;
-        setTimeout(() => { el.style.display = "none"; }, 2000);
-        return;
-      } catch(e) {
-        el.textContent = "Warming up server… (first load can take up to a minute)";
-      }
-    }
-    el.textContent = "Still starting — try again shortly.";
-  }
-
-  document.addEventListener("DOMContentLoaded", prewarm);
-</script>
-
 </body>
 </html>
+
