--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,8 @@
   :root{
     --bg:#0A1220; --panel:#0B1322; --text:#F5F7FA; --muted:#C7CCD7;
     --border:#1C2A3F; --cta:#111722; --radius:20px; --space:22px; --container:1120px;
+    --accent:#54a0ff;            /* matches questionnaire page */
+    --outline:#2a3d5c;           /* matches questionnaire page */
     --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text","Helvetica Neue","Segoe UI", Roboto, Arial, sans-serif;
   }
   *{box-sizing:border-box}
@@ -27,21 +29,34 @@
   .tick{width:22px;height:22px;border-radius:999px;display:grid;place-items:center;background:var(--bg);border:1px solid var(--bg);}
   .tick svg path{stroke:var(--bg);}
 
+  /* Take part button — IDENTICAL treatment to questionnaire submit */
   .cta{
-    display:inline-block;width:100%;max-width:300px;margin:auto;
-    padding:16px 18px;text-align:center;font-weight:600;font-size:17px;
-    color:var(--text);background:var(--cta);border:none;border-radius:14px;
-    position:relative;z-index:0;overflow:hidden;text-decoration:none;
-    transition:transform .06s ease, background .2s ease, outline-color .2s ease;
-    /* subtle outline */
+    display:inline-block; width:100%; max-width:300px; margin:auto;
+    padding:16px 18px; text-align:center; font-weight:600; font-size:17px;
+    color:var(--text); background:var(--cta);
+    border:1px solid var(--outline); border-radius:14px;
+    position:relative; z-index:0; overflow:hidden; text-decoration:none; cursor:pointer;
+    transition:transform .06s ease, background .2s ease, outline-color .2s ease, box-shadow .2s ease;
+    /* subtle always-on outline using palette blue */
     outline:2px solid rgba(84,160,255,.18);
     outline-offset:2px;
   }
-  .cta::before{content:"";position:absolute;inset:-6px;border-radius:inherit;background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);filter:blur(6px);z-index:-2;animation:spin 4s linear infinite;opacity:0;transition:opacity .3s ease;}
-  .cta::after{content:"";position:absolute;inset:0;border-radius:inherit;background:var(--cta);z-index:-1;}
-  .cta:hover{transform:translateY(-1px);background:#101828;outline-color:rgba(84,160,255,.28);}
-  .cta:hover::before{opacity:1;}
-  .cta:focus-visible{outline:3px solid rgba(84,160,255,.38);outline-offset:3px;box-shadow:0 0 0 3px rgba(84,160,255,.18);}
+  .cta::before{
+    content:""; position:absolute; inset:-6px; border-radius:inherit;
+    background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);
+    filter:blur(6px); z-index:-2; animation:spin 4s linear infinite; opacity:0; transition:opacity .3s ease;
+  }
+  .cta::after{ content:""; position:absolute; inset:0; border-radius:inherit; background:var(--cta); z-index:-1; }
+  .cta:hover{
+    transform:translateY(-1px); background:#101828;
+    outline-color:rgba(84,160,255,.28);
+  }
+  .cta:hover::before{ opacity:1; }
+  .cta:focus-visible{
+    outline:3px solid rgba(84,160,255,.38);
+    outline-offset:3px;
+    box-shadow:0 0 0 3px rgba(84,160,255,.18);
+  }
   @keyframes spin{to{transform:rotate(360deg);}}
 
   .note{color:var(--muted);font-size:13px;margin-top:10px}
