--- a/static/index.html
+++ b/static/index.html
@@ -13,58 +13,96 @@
     --accent:#54a0ff;            /* matches questionnaire page */
     --outline:#2a3d5c;           /* matches questionnaire page */
     --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text","Helvetica Neue","Segoe UI", Roboto, Arial, sans-serif;
+
+    /* background-only additions */
+    --bg-top:#0A1220;            /* start of vignette */
+    --bg-bottom:#080D18;         /* end of vignette */
+    --noise:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO0WQ8AAW0B8w1i6b0AAAAASUVORK5CYII=");
   }
   *{box-sizing:border-box}
   html,body{height:100%}
-  body{margin:0;font-family:var(--font);background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;}
+  body{
+    margin:0; font-family:var(--font); color:var(--text);
+    -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+    background:none; position:relative;
+  }
+  body::before{ content:""; position:fixed; inset:0; pointer-events:none; z-index:-1; background:
+      radial-gradient(1200px 700px at 70% -10%, rgba(84,160,255,.08), transparent 70%),
+      radial-gradient(900px 600px at -10% 30%, rgba(25,195,125,.07), transparent 70%),
+      linear-gradient(to bottom, var(--bg-top) 0%, var(--bg-top) 40%, var(--bg-bottom) 100%);
+  }
+  body::after{ content:""; position:fixed; inset:0; pointer-events:none; background-image:var(--noise); opacity:.05; mix-blend-mode:soft-light; }
 
-  .wrap{width:100%;max-width:var(--container);margin:0 auto;padding:calc(var(--space)*2) var(--space) calc(var(--space)*3);display:grid;gap:calc(var(--space)*2);}
+  .wrap{width:100%;max-width:var(--container);margin:0 auto;padding:calc(var(--space)*2) var(--space) calc(var(--space)*3);display:grid;gap:calc(var(--space)*2);}  
   @media (min-width:980px){.wrap{grid-template-columns:1fr 1fr;align-items:center;min-height:80dvh;}}
   .stack{max-width:640px;margin:auto;text-align:center;}
 
   .logo{font-family:"SF Pro Display",-apple-system,"Helvetica Neue",Arial,sans-serif;font-weight:700;font-size:64px;letter-spacing:-.03em;margin:0 0 calc(var(--space)*0.8);line-height:1;}
-  .tagline{font-size:24px;line-height:1.25;margin:0 0 calc(var(--space)*1.2);}
+  .tagline{font-size:24px;line-height:1.25;margin:0 0 calc(var(--space)*1.2);letter-spacing:-0.01em;font-weight:500;}  
   .bullets{list-style:none;margin:0 0 calc(var(--space)*1.4);padding:0;display:grid;gap:14px;justify-content:center;}
-  .bullet{display:grid;grid-template-columns:26px 1fr;column-gap:12px;align-items:center;font-size:17px;line-height:1.45;max-width:400px;margin:0 auto;}
-  .tick{width:22px;height:22px;border-radius:999px;display:grid;place-items:center;background:var(--bg);border:1px solid var(--bg);}
-  .tick svg path{stroke:var(--bg);}
+  .bullet{font-size:17px;line-height:1.45;max-width:440px;margin:0 auto;}
 
-  /* Take part button — IDENTICAL treatment to questionnaire submit */
+  /* Take part button */
   .cta{
     display:inline-block; width:100%; max-width:300px; margin:auto;
     padding:16px 18px; text-align:center; font-weight:600; font-size:17px;
-    color:var(--text); background:var(--cta);
-    border:1px solid var(--outline); border-radius:14px;
+    color:var(--text);
+    /* Gradient border using layered backgrounds (no bleed through) */
+    border:1px solid transparent; border-radius:14px;
+    background:
+      linear-gradient(180deg,#111722 0%, #0C1423 100%) padding-box,
+      conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b) border-box;
     position:relative; z-index:0; overflow:hidden; text-decoration:none; cursor:pointer;
-    transition:transform .06s ease, background .2s ease, outline-color .2s ease, box-shadow .2s ease;
-    /* subtle always-on outline using palette blue */
+    transition:transform .25s cubic-bezier(.2,.8,.2,1), background-color .25s ease, outline-color .25s ease, box-shadow .25s ease;
     outline:2px solid rgba(84,160,255,.18);
     outline-offset:2px;
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.10), 0 8px 24px rgba(0,0,0,.45);
   }
-  .cta::before{
-    content:""; position:absolute; inset:-6px; border-radius:inherit;
-    background:conic-gradient(from 0deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b);
-    filter:blur(6px); z-index:-2; animation:spin 4s linear infinite; opacity:0; transition:opacity .3s ease;
-  }
-  .cta::after{ content:""; position:absolute; inset:0; border-radius:inherit; background:var(--cta); z-index:-1; }
+  /* ring pseudo-element removed in favor of layered background border */
+  /* inner overlay removed; inner gradient handled by padding-box layer */
   .cta:hover{
-    transform:translateY(-1px); background:#101828;
+    transform:translateY(-1px);
+    background:
+      linear-gradient(180deg,#111A2A 0%, #0C1626 100%) padding-box,
+      conic-gradient(from 90deg,#ff6b6b,#feca57,#1dd1a1,#54a0ff,#5f27cd,#ff6b6b) border-box;
     outline-color:rgba(84,160,255,.28);
+    box-shadow:0 0 0 6px rgba(84,160,255,.12), inset 0 1px 0 rgba(255,255,255,.10), 0 10px 28px rgba(0,0,0,.5);
   }
-  .cta:hover::before{ opacity:1; }
+  /* no ::before; hover handled on background and shadow */
   .cta:focus-visible{
-    outline:3px solid rgba(84,160,255,.38);
+    outline:2px solid rgba(84,160,255,.65);
     outline-offset:3px;
-    box-shadow:0 0 0 3px rgba(84,160,255,.18);
+    box-shadow:0 0 0 6px rgba(84,160,255,.16);
   }
   @keyframes spin{to{transform:rotate(360deg);}}
 
   .note{color:var(--muted);font-size:13px;margin-top:10px}
 
-  .visual{border:1px solid var(--border);border-radius:var(--radius);background:var(--panel);padding:20px;display:flex;align-items:center;justify-content:center;}
+  .visual{
+    border:1px solid rgba(255,255,255,.06);
+    background:linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
+    border-radius:var(--radius);
+    padding:20px; display:flex; align-items:center; justify-content:center;
+    box-shadow:inset 0 1px 0 rgba(255,255,255,.06), 0 20px 60px rgba(0,0,0,.45);
+    backdrop-filter:saturate(115%) blur(4px);
+  }
+  .visual img{
+    width:100%; max-width:460px; height:auto; border-radius:calc(var(--radius) - 4px);
+    box-shadow:inset 0 0 0 1px rgba(255,255,255,.05), 0 30px 80px rgba(0,0,0,.5);
+  }
 
-  footer{text-align:center;padding:calc(var(--space)*2);border-top:1px solid var(--border);color:var(--muted);font-size:14px;margin-top:calc(var(--space)*3);}
+  footer{text-align:center;padding:calc(var(--space)*2);border-top:1px solid rgba(255,255,255,.06);color:var(--muted);font-size:14px;margin-top:calc(var(--space)*3);}  
   @media (min-width:1200px){.logo{font-size:72px}.tagline{font-size:26px}}
+
+  /* Global transitions + accessibility */
+  *,*:before,*:after{
+    transition:transform .25s cubic-bezier(.2,.8,.2,1), opacity .25s ease, background-color .25s ease, box-shadow .25s ease;
+  }
+  @media (prefers-reduced-motion: reduce){
+    *,*:before,*:after{ transition:none !important; animation:none !important; }
+  }
+  ::selection{ background:rgba(84,160,255,.28); color:#fff; }
+  :root{ color-scheme:dark; }
 </style>
 </head>
 <body>
@@ -76,12 +114,7 @@
 
     <ul class="bullets">
       <li class="bullet">
-        <span class="tick" aria-hidden="true">
-          <svg viewBox="0 0 24 24" fill="none" width="22" height="22" aria-hidden="true">
-            <path d="M6 12.5l3.2 3.2L18 7.9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-          </svg>
-        </span>
-        <span>Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.</span>
+        Built for Employment Law. Drafts and compiles documents such as Statement of Facts, ET1’s and Schedule of Loss’ with total accuracy and zero cloud risk.
       </li>
     </ul>
 
@@ -94,7 +127,6 @@
       src="/static/poc.gif"
       alt="Drag & drop payslips to Lylo; Lylo drafts an accurate Schedule of Loss."
       width="800" height="850"
-      style="width:100%; max-width:460px; height:auto; border-radius:calc(var(--radius) - 4px);" 
       loading="eager" decoding="async" />
   </aside>
 </main>
