--- a/static/research.html
+++ b/static/research.html
@@ -14,13 +14,34 @@
     --outline:#2a3d5c;       /* desaturated blue already used in focus rings */
     --font:-apple-system, BlinkMacSystemFont, "SF Pro Display", "SF Pro Text",
            "Helvetica Neue", "Segoe UI", Roboto, Arial, sans-serif;
+
+    /* background vars for fixed vignette */
+    --bg-top:#0A1220;            /* start of vignette */
+    --bg-bottom:#080D18;         /* end of vignette */
+    --noise:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mO0WQ8AAW0B8w1i6b0AAAAASUVORK5CYII=");
   }
   *{box-sizing:border-box}
   html,body{height:100%}
+  html{ background:var(--bg-bottom); }
   body{
     margin:0; font-family:var(--font);
-    background:var(--bg); color:var(--text);
+    background:none; /* moved gradients to a fixed layer to avoid scroll shift */
+    color:var(--text);
     -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
+    position:relative;
+  }
+  /* Fixed, unified vignette (no sudden change on scroll) */
+  body::before{
+    content:""; position:fixed; inset:0; pointer-events:none; z-index:-1;
+    background:
+      radial-gradient(1200px 700px at 70% -10%, rgba(84,160,255,.08), transparent 70%),
+      radial-gradient(900px 600px at -10% 30%, rgba(25,195,125,.07), transparent 70%),
+      linear-gradient(to bottom, var(--bg-top) 0%, var(--bg-top) 40%, var(--bg-bottom) 100%);
+  }
+  /* Subtle texture overlay */
+  body::after{
+    content:""; position:fixed; inset:0; pointer-events:none; z-index:-1;
+    background-image:var(--noise); opacity:.05; mix-blend-mode:soft-light;
   }
 
   /* Page layout */
@@ -130,7 +151,6 @@
     color:var(--text); background:var(--cta); border:1px solid var(--outline); border-radius:14px;
     position:relative; z-index:0; overflow:hidden; cursor:pointer;
     transition:transform .06s ease, background .2s ease, outline-color .2s ease, box-shadow .2s ease;
-    /* subtle always-on outline using palette blue */
     outline:2px solid rgba(84,160,255,.18);
     outline-offset:2px;
   }
